# Protocol

./: .gitignore  CMakeLists.txt  COMPILE_GUIDE.md  README.md  README_DI.md  README_DLL.md
adapter/: protocol_adapter.cpp  protocol_adapter.h  protocol_adapter_refactored.cpp  protocol_adapter_refactored.h
buffer/: README.md  producer_consumer_manager.cpp  producer_consumer_manager.h  protocol_buffer_adapter.cpp  protocol_buffer_adapter.h  protocol_system_integrator.cpp  protocol_system_integrator.h
cmake/: ProtocolLibConfig.cmake.in
config/: parameter_mapping.json
connection/: connection_manager.cpp  connection_manager.h
core/: imessage_handler.h  message_types.cpp  message_types.h
examples/: CMakeLists.txt  README.md  advanced_usage_example.cpp  basic_usage_example.cpp  dependency_injection_example.cpp  dependency_injection_example.qml  producer_consumer_integration_example.cpp  protocol_integration_test.cpp  protocol_usage_example.qml  usage_example.cpp
handlers/: alpha_message_handler.cpp  alpha_message_handler.h  anc_message_handler.cpp  anc_message_handler.h  channel_message_handler.cpp  channel_message_handler.h  enc_message_handler.cpp  enc_message_handler.h  realtime_data_handler.cpp  realtime_data_handler.h  rnc_message_handler.cpp  rnc_message_handler.h  vehicle_message_handler.cpp  vehicle_message_handler.h
mapping/: parameter_mapper.cpp  parameter_mapper.h
messages/: ERNC_praram.pb.c  ERNC_praram.pb.h  ERNC_praram.proto  basic.pb.c  basic.pb.h  basic.proto  ernc.pb.c  ernc.pb.h  ernc.proto
nanopb/: pb_encode.c
serialization/: message_factory.cpp  message_factory.h  message_serializer.cpp  message_serializer.h  protocol_packager.cpp  protocol_packager.h
tests/: test_message_serializer.cpp  test_parameter_mapper.cpp
transport/: itransport.h  serial_transport.cpp  serial_transport.h
version/: version_config.h.in  version_manager.cpp  version_manager.h
